--- a/index.html
+++ b/index.html
@@ -142,13 +142,13 @@
              <a href="#!"> <img src="./assets/img/course-1.jpg" alt="Basic web design" class="thumb"></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">Basic web design</a></h3>
+                  <h3 class="title"><a class="line-clamp break-all" href="#!">Basic web design</a></h3>
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="start">
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="decs">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="decs line-clamp line-2 break-all ">Get the best course, gain knowledge and shine for your future career.</p>
                 <div class="foot">
                   <span class="price">$120.75</span>
                   <button class="btn btn-book">Book Now</button>
@@ -161,13 +161,13 @@
              <a href="#!"> <img src="./assets/img/course-2.jpg" alt="UI/UX design" class="thumb"></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">UI/UX design</a></h3>
+                  <h3 class="title"><a class="line-clamp break-all " href="#!">UI/UX design</a></h3>
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="start">
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="decs">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="decs line-clamp line-2 break-all ">Get the best course, gain knowledge and shine for your future career.</p>
                 <div class="foot">
                   <span class="price">$120.75</span>
                   <button class="btn btn-book">Book Now</button>
@@ -180,13 +180,13 @@
              <a href="#!"> <img src="./assets/img/course-3.jpg" alt="Web App design" class="thumb"></a>
               <div class="info">
                 <div class="head">
-                  <h3 class="title"><a href="#!">Web App design</a></h3><a href="#!"></a>
+                  <h3 class="title"><a class="line-clamp break-all " href="#!">Web App design</a></h3><a href="#!"></a>
                   <div class="rating">
                     <img src="./assets/icon/star.svg" alt="" class="start">
                     <span class="value">4.5</span>
                   </div>
                 </div>
-                <p class="decs">Get the best course, gain knowledge and shine for your future career.</p>
+                <p class="decs line-clamp line-2 break-all ">Get the best course, gain knowledge and shine for your future career.</p>
                 <div class="foot">
                   <span class="price">$120.75</span>
                   <button class="btn btn-book">Book Now</button>
