--- a/index.html
+++ b/index.html
@@ -196,6 +196,33 @@
           </div>
         </div>
        </div>
+
+       <!-- feedback -->
+        <div class="feedback">
+          <div class="main-content">
+            <div class="feedback-list">
+              <div class="feedback-item">
+                <!-- Khoi ben trai -->
+                <div class="info">
+                  <img src="./assets/img/ava1.jpg" alt="Peter Moor" class="avatar">
+                  <div class="member-name">Peter Moor</div>
+                  <p class="desc">Student of Web Design</p>
+                  <div class="dots">
+                    <span class="dot"></span>
+                    <span class="dot active"></span>
+                    <span class="dot"></span>
+                </div>
+                </div>
+
+                <!-- Khoi ban phai -->
+                 <div class="content">
+                  <img src="./assets/icon/quotes.svg" alt="" class="open-quotes">
+                  <blockquote>Not only does my resume look impressive—filled with the names and logos of world-class institutions—but these certificates also bring me closer to my career goals by validating the skills I've learned." </blockquote>
+                 </div>
+              </div>
+            </div>
+          </div>
+        </div>
      </div>
 
   </body>
