--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <title>Figma to HTML</title>
   </head>
-  <body style="height: 10000px;">
+  <body>
     <!-- Header -->
     <header class="header fiexd">
       <div class="main-content">
@@ -435,6 +435,58 @@
             </div>
           </div>
      </div>
+
+     <!-- footer -->
+      <footer class="footer">
+        <div class="main-content">
+          <div class="row">
+            <!-- column 1 -->
+            <div class="column">
+              <a href="#!"><img src="./assets/img/Lesson-white.svg" alt="Lesson." class="logo"></a>
+              <p class="desc">Need to help for your dream Career? trust us. With Lesson, study becomes a lot easier with us.</p>
+              <div class="socials">
+                <a href=""><img src="./assets/img/Twitter.svg" alt="Twitte" class="icon"></a>
+                <a href=""><img src="./assets/img/Facebook.svg" alt="Facebook" class="icon"></a>
+                <a href=""><img src="./assets/img/Linkedin.svg" alt="Linkedin" class="icon"></a>
+                <a href=""><img src="./assets/img/Instagram.svg" alt="Instagram" class="icon"></a>
+              </div>
+            </div>
+                   <!-- column 2 -->
+            <div class="column">
+              <h3 class="title">Company</h3>
+              <ul class="list">
+                <li><a href="#!">About Us</a></li>
+                <li><a href="#!">Features</a></li>
+                <li><a href="#!">Our Pricing</a></li>
+                <li><a href="#!">Latest News</a></li>
+              </ul>
+            </div>
+                   <!-- column 3 -->
+            <div class="column">
+              <h3 class="title">Support</h3>
+              <ul class="list">
+                <li><a href="#!">FAQ’s</a></li>
+                <li><a href="#!">Terms & Conditions</a></li>
+                <li><a href="#!">Privacy Policy</a></li>
+                <li><a href="#!">Contact Us</a></li>
+              </ul>
+            </div>
+                   <!-- column 4 -->
+            <div class="column">
+              <h3 class="title">Address</h3>
+              <ul class="list">
+                <li><a href="#!"><strong>Location: </strong>27 Division St, New York, NY 10002, USA</a></li>
+                <li><a href="#!"><strong>Email: </strong>email@gmail.com</a></li>
+                <li><a href="#!"><strong>Phone: </strong>+ 000 1234 567 890</a></li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="copyright">
+            <p>Copyright ©2022 webdesign.gdn All rights reserved</p>
+          </div>
+        </div>
+      </footer>
 
   </body>
 </html>
